--- a/composer.json
+++ b/composer.json
@@ -21,9 +21,9 @@
         "yiisoft/yii2-bootstrap": "~2.0.0",
         "yiisoft/yii2-swiftmailer": "~2.0",
         "yiisoft/yii2-authclient": "~2.1.0",
-        "yiisoft/yii2-imagine": "~2.0",
         "yiisoft/yii2-jui": "~2.0",
         "deesoft/yii2-console": "~1.0",
+        "deesoft/yii2-tools": "~1.0",
         "mdmsoft/yii2-admin": "~2.0",
         "mdmsoft/yii2-upload-file": "~2.0"
     },
