add module access-user, view profile, change password, update-profile, update-user-email

--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,9 @@
         "mdmsoft/yii2-admin": "~2.0",
         "mdmsoft/yii2-upload-file": "~2.0",
         "deesoft/yii2-queue": "^1.0@dev",
-        "rmrevin/yii2-fontawesome": "~2.17"
+        "rmrevin/yii2-fontawesome": "~2.17",
+        "yiisoft/yii2-imagine": "^2.1",
+        "kartik-v/yii2-tabs-x": "*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0",
